<resources>
    <string name="app_name">Seamless</string>
    <string name="Text1">Welcome Back</string>
    <string name="Text2">Login to your account</string>
    <string name="Text3">Don\'t have an account?</string>
    <string name="Text4">Remember me</string>
    <string name="Text5">Forgot password?</string>
    <string name="Text6">Or</string>
    <string name="Text7">Sign in with Google</string>
    <string name="Text8">Let\'s get started</string>
    <string name="Text9">Create Your Account</string>
    <string name="Text10">By creating your account or continue with Google, you agree to our Terms and Conditions and Privacy Policy</string>
    <string name="Text11">Already have an account?</string>
    <string name="Text12">Explore</string>
    <string name="Text13">Electronics</string>
    <string name="Text14">Beauty &amp; Health</string>
    <string name="Text15">Women\'s</string>
    <string name="Text16">Coins</string>
    <string name="Text17">Super Deals</string>
    <string name="Text18">Grow to Get</string>
    <string name="Text19">Category</string>
    <string name="Text20">Save Big</string>
    <string name="Text21">Big brands|Quality assurance</string>
    <string name="Text22">LKR 1,200.55</string>
    <string name="Text23">LKR 87.23</string>
    <string name="Text24">Save 1,700.55</string>
    <string name="Text25">Save 107.55</string>
    <string name="Text26">Bundle Deals</string>
    <string name="Text27">LKR 5999.87</string>
    <string name="Text">LKR 2000.87</string>
    <string name="Text30">LKR 8999.87</string>
    <string name="Text28">Save 8,000.33</string>
    <string name="name">Pratheesha Samadhi</string>
    <string name="shop">Shop Now</string>
    <string name="myorder">My Orders</string>
    <string name="topay">To Pay</string>
    <string name="toship">To Ship</string>
    <string name="shipped">Shipped</string>
    <string name="toreview">To Review</string>
    <string name="returns">Returns</string>
    <string name="history">History</string>
    <string name="wishlist">Wishlist</string>
    <string name="cards">Cards</string>
    <string name="credits">Credits</string>
    <string name="coupons">Coupons</string>
    <string name="Help">Help</string>
    <string name="suggestions">Suggestion</string>
    <string name="more">More to Love</string>
    <string name="Input1">Username or Email</string>
    <string name="Input2">Password</string>
    <string name="Input3">Name</string>
    <string name="Input4">Confirm Password</string>
    <string name="Input5">Email</string>
    <string name="Input6">Search</string>
    <string name="button1">Sign In</string>
    <string name="button2">Sign Up</string>
    <string name="checkout">Checkout</string>
    <string name="all">All</string>
    <string name="cart">Cart</string>
    <string name="puttlam">Puttlam</string>
    <string name="ear">Korean Fashion Earings</string>
    <string name="blo">Pattern Vibrant Blouse </string>
    <string name="key">Wireless Keyboard</string>
    <string name="cate1">A1</string>
    <string name="cate2">B7</string>
    <string name="cate3">A5</string>
    <string name="ship">free shipping</string>
    <string name="no">-  1  +</string>
    <string name="chek">Order Confirmation</string>
    <string name="total">Total</string>
    <string name="pay">Buy</string>
    <string name="pr">Rs. 380</string>
    <string name="getstarted">Get Started</string>
    <string name="description">Description</string>
    <string name="home">Home &amp; Garden</string>
    <string name="tools">Tools &amp; Industrial</string>
    <string name="beauty">Beauty &amp; Health</string>
    <string name="kids">Babies &amp; Kids</string>
    <string name="bag">Luggage &amp; Bags</string>
    <string name="clothes"> Clothes</string>
    <string name="hair">Hair Extensions &amp; Wigs</string>
    <string name="accessories">Accessories</string>
    <string name="computer">Computer &amp; Education</string>
    <string name="shoes">Shoes</string>
    <string name="jwe">Jewelry &amp; Watches</string>
    <string name="furniture">Furniture</string>
    <string name="cat">Product Categories</string>
</resources>