<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baclimg2"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Text8"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/Text2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/userinput1"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:padding="13dp"
        android:text="@string/Input3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/userinput2"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:background="@drawable/roundedcorner"
        android:layout_marginTop="20dp"
        android:text="@string/Input5"
        android:textSize="20sp"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinput1" />

    <EditText
        android:id="@+id/userinput3"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:background="@drawable/roundedcorner"
        android:layout_marginTop="20dp"
        android:text="@string/Input2"
        android:textSize="20sp"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinput2" />

    <EditText
        android:id="@+id/userinput4"
        android:hint="@string/Input4"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:background="@drawable/roundedcorner"
        android:layout_marginTop="20dp"
        android:text="@string/Input4"
        android:textSize="20sp"
        android:padding="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinput3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="348dp"
        android:layout_height="71dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:text="@string/Text10"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinput4" />

    <Button
        android:id="@+id/button"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/accent1"
        android:text="@string/button2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Text6"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <EditText
        android:id="@+id/editTextText"
        android:hint="@string/Text7"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:text="@string/Text7"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/description"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/Text11"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/text"
        android:text="@string/button1"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView4"
        android:contentDescription="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/userinput3"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="@+id/userinput3"
        app:layout_constraintTop_toTopOf="@+id/userinput3"
        app:srcCompat="@drawable/baseline_visibility_off_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:contentDescription="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/userinput4"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="@+id/userinput4"
        app:layout_constraintTop_toTopOf="@+id/userinput4"
        app:srcCompat="@drawable/baseline_visibility_off_24" />


</androidx.constraintlayout.widget.ConstraintLayout>