<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/baclimg2"
    android:layout_height="match_parent"
    tools:context=".login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="246dp"
        android:layout_height="49dp"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/Text1"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userinput1"
        android:hint="@string/Input2"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:padding="13dp"
        android:text="@string/Input2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinput2" />

    <EditText
        android:id="@+id/userinput2"
        android:hint="@string/Input1"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:padding="13dp"
        android:text="@string/Input1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/Text2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/description"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/userinput1"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toStartOf="@+id/userinput1"
        app:layout_constraintTop_toBottomOf="@+id/userinput2"
        app:srcCompat="@drawable/baseline_visibility_off_24" />

    <Button
        android:id="@+id/button4"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/accent2"
        android:fontFamily="sans-serif-medium"
        android:text="@string/button1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinput1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="176dp"
        android:layout_height="37dp"
        android:layout_marginTop="35dp"
        android:text="@string/Text6"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <EditText
        android:id="@+id/editTextText3"
        android:hint="@string/Text7"
        android:layout_width="315dp"
        android:layout_height="49dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundedcorner"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="text"
        android:padding="10dp"
        android:text="@string/Text7"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView3"
        android:contentDescription="@string/description"
        android:layout_width="28dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText3"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/editTextText3"
        app:layout_constraintTop_toTopOf="@+id/editTextText3"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Text3"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/text"
        android:text="@string/button2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="453dp"
        android:layout_height="55dp"
        android:layout_marginTop="27dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userinput1">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="301dp"
            android:layout_height="match_parent"
            android:layout_marginStart="54dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:text="@string/Text4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="349dp"
            android:layout_height="match_parent"
android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:text="@string/Text5"
            android:textAlignment="textStart"
            android:layout_marginStart="32dp"
            android:textColorLink="@color/text"
            android:textSize="17sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>